--- a/index.html
+++ b/index.html
@@ -3,53 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ödeme Bilgileri</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Başvuru Merkezi</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            color: #007bff;
+        }
+        .card {
+            border-radius: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .form-control {
+            border-radius: 10px;
+        }
+        .btn-primary {
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Ödeme Bilgileri</h1>
-        </header>
 
-        <main id="content">
-            <!-- İçerik burada yüklenecek -->
-        </main>
-
-        <footer>
-            <div class="contact">
-                <p>İletişim için <a href="https://wa.me/+905013312196" target="_blank">WhatsApp</a></p>
-                <p>İletişim için <a href="https://t.me/VALANCE1122" target="_blank">Telegram @VALANCE1122</a></p>
-                <p>Kredi veya Banka kartı ile 3D ödeme yapmak isterseniz canlı destek veya WhatsApp'tan iletişime geçin.</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h1 class="text-center my-4">Başvuru Merkezi</h1>
+            <div class="card">
+                <div class="card-body">
+                    <form id="applicationForm" novalidate>
+                        <div class="form-group">
+                            <label for="name">Adı Soyadı:</label>
+                            <input type="text" id="name" name="name" class="form-control" required>
+                            <div class="invalid-feedback">Lütfen adınızı girin.</div>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Telefon Numarası:</label>
+                            <input type="tel" id="phone" name="phone" class="form-control" required pattern="^\d{10,15}$">
+                            <div class="invalid-feedback">Lütfen geçerli bir telefon numarası girin.</div>
+                        </div>
+                        <div class="form-group">
+                            <label for="dob">Doğum Tarihi:</label>
+                            <input type="date" id="dob" name="dob" class="form-control" required>
+                            <div class="invalid-feedback">Lütfen doğum tarihinizi girin.</div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Gönder</button>
+                    </form>
+                </div>
             </div>
-
-            <div class="support-button">
-                <button onclick="openLiveSupport()">Ödeme Yaptıysan Bildirmek için Canlı Desteğe Bağlan</button>
-            </div>
-        </footer>
+        </div>
     </div>
+</div>
 
-    <script src="script.js"></script>
-    <script>
-        // Sayfa yüklendiğinde içerikleri yükle
-        document.addEventListener('DOMContentLoaded', function() {
-            fetch('content.html')
-                .then(response => response.text())
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var name = localStorage.getItem('name');
+        if (name) {
+            document.getElementById('name').value = name;
+        }
+
+        var form = document.getElementById('applicationForm');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            event.stopPropagation();
+
+            if (form.checkValidity() === false) {
+                form.classList.add('was-validated');
+            } else {
+                localStorage.setItem('name', document.getElementById('name').value);
+
+                var name = document.getElementById('name').value;
+                var phone = document.getElementById('phone').value;
+                var dob = document.getElementById('dob').value;
+
+                var scriptURL = 'https://script.google.com/macros/s/AKfycbwG2VxFUpd36EJOYLfTt3FbIIw5_DIadby6EgVphSpnVUPO2pQgS6kw1-O9RLlVztUc/exec';
+
+                fetch(scriptURL, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
+                    body: JSON.stringify({name: name, phone: phone, dob: dob}),
+                    mode: 'cors'
+                })
+                .then(response => response.json())
                 .then(data => {
-                    document.getElementById('content').innerHTML = data;
+                    if (data.result === 'success') {
+                        window.location.href = 'thankyou.html';
+                    } else {
+                        alert('Form gönderilemedi. Lütfen tekrar deneyin.');
+                    }
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+                    alert('Bir hata oluştu. Lütfen tekrar deneyin.');
                 });
-        });
-    </script>
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/6699416932dca6db2cb1c217/1i33af10l';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-        })();
-    </script>
+            }
+        }, false);
+    });
+</script>
+
 </body>
 </html>
