--- a/index.html
+++ b/index.html
@@ -2,26 +2,47 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Başvuru Formu</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f9f9f9;
+        }
+        .logo-wrapper {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo-wrapper img {
+            max-width: 100%;
+            height: auto;
+            width: 200px; /* Logo genişliği, ihtiyaca göre ayarlanabilir */
+        }
+        .form-wrapper {
+            width: 100%;
+            max-width: 640px; /* Maksimum genişlik */
+            height: 721px; /* Form yüksekliği */
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
     <div class="logo-wrapper">
         <img src="turkcell.png" alt="Turkcell Logo">
     </div>
     <div class="form-wrapper">
-        <iframe id="formFrame" src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
     </div>
-    <script>
-        function resizeIframe() {
-            var iframe = document.getElementById('formFrame');
-            var height = window.innerHeight * 0.8; // Yüksekliği ekranın %80'i kadar yapar
-            iframe.style.height = height + 'px';
-        }
-
-        window.addEventListener('resize', resizeIframe);
-        window.addEventListener('load', resizeIframe);
-    </script>
 </body>
 </html>
