--- a/index.html
+++ b/index.html
@@ -4,66 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Başvuru Formu</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #f9f9f9;
-        }
-        .logo-wrapper {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo-wrapper img {
-            max-width: 100%;
-            height: auto;
-            width: 200px; /* Logo genişliği, ihtiyaca göre ayarlanabilir */
-        }
-        .form-wrapper {
-            width: 100%;
-            max-width: 640px; /* Maksimum genişlik */
-            height: 721px; /* Form yüksekliği */
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="logo-wrapper">
-        <img src="turkcell.png" alt="Turkcell Logo">
+    <div class="container">
+        <div class="logo-wrapper">
+            <img src="turkcell.png" alt="Turkcell Logo">
+        </div>
+        <div class="form-wrapper">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+        </div>
     </div>
-    <div class="form-wrapper">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
-    </div>
-    <div id="visitor-counter" onclick="showVisitorDetails()">
+
+    <!-- Histats.com (div with counter) -->
+    <div id="histats_counter" style="position: fixed; bottom: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.7); color: #fff; padding: 10px; border-radius: 5px; font-size: 14px;">
         Şu anda sitede X kişi var
     </div>
-
-    <script>
-        function updateVisitorCount() {
-            fetch('https://example.com/api/visitor_count')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('visitor-counter').innerText = `Şu anda sitede ${data.count} kişi var`;
-                })
-                .catch(error => console.error('Hata:', error));
-        }
-
-        function showVisitorDetails() {
-            // Örnek: Burada detayları gösterecek fonksiyonu ekleyin.
-            alert('Buraya detaylar gösterilecek.');
-        }
-
-        setInterval(updateVisitorCount, 5000); // Her 5 saniyede bir günceller
+    <!-- Histats.com START (async) -->
+    <script type="text/javascript">
+        var _Hasync= _Hasync|| [];
+        _Hasync.push(['Histats.start', '1,4884091,4,138,112,33,00010000']);
+        _Hasync.push(['Histats.fasi', '1']);
+        _Hasync.push(['Histats.track_hits', '']);
+        (function() {
+            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+            hs.src = ('//s10.histats.com/js15_as.js');
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+        })();
     </script>
+    <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4884091&101" alt="" border="0"></a></noscript>
+    <!-- Histats.com END -->
 </body>
 </html>
