--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
             <img src="turkcell.png" alt="Turkcell Logo">
         </div>
         <div class="form-wrapper">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" width="100%" height="721" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
         </div>
     </div>
 
     <!-- Histats.com (div with counter) -->
-    <div id="histats_counter" style="position: fixed; bottom: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.7); color: #fff; padding: 10px; border-radius: 5px; font-size: 14px;">
+    <div id="histats_counter" onclick="showVisitorDetails()">
         Şu anda sitede X kişi var
     </div>
+
     <!-- Histats.com START (async) -->
     <script type="text/javascript">
         var _Hasync= _Hasync|| [];
@@ -34,5 +35,12 @@
     </script>
     <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4884091&101" alt="" border="0"></a></noscript>
     <!-- Histats.com END -->
+
+    <script>
+        function showVisitorDetails() {
+            // Örnek: Burada detayları gösterecek fonksiyonu ekleyin.
+            alert('Buraya detaylar gösterilecek.');
+        }
+    </script>
 </body>
 </html>
