--- a/index.html
+++ b/index.html
@@ -4,24 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Başvuru Formu</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f9f9f9;
+        }
+        .logo-wrapper {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo-wrapper img {
+            max-width: 100%;
+            height: auto;
+            width: 200px; /* Logo genişliği, ihtiyaca göre ayarlanabilir */
+        }
+        .form-wrapper {
+            width: 100%;
+            max-width: 640px; /* Maksimum genişlik */
+            height: 721px; /* Form yüksekliği */
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="logo-wrapper">
-            <img src="turkcell.png" alt="Turkcell Logo">
-        </div>
-        <div class="form-wrapper">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" width="100%" height="721" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
-        </div>
+    <div class="logo-wrapper">
+        <img src="turkcell.png" alt="Turkcell Logo">
     </div>
-
-    <!-- Histats.com (div with counter) -->
-    <div id="histats_counter" onclick="showVisitorDetails()">
-        Şu anda sitede X kişi var
+    <div class="form-wrapper">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbLef7Z7xOAOFo82n3fP7qXaesxRJ6iQJ_dUeYh6XZlTLQgA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
     </div>
-
-    <!-- Histats.com START (async) -->
+        <!-- Histats.com START (async) -->
     <script type="text/javascript">
         var _Hasync= _Hasync|| [];
         _Hasync.push(['Histats.start', '1,4884091,4,138,112,33,00010000']);
